--- a/css/global.css
+++ b/css/global.css
@@ -12,7 +12,48 @@ body {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
 }
+.hamburger-btn {
+    display: none;
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #333;
+    padding: 10px;
+}
+.nav-menu{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+@media (max-width: 768px) {
+    .hamburger-btn {
+        display: block;
+    }
 
+    .nav-menu {
+        display: none;
+        flex-direction: column;
+        background: white;
+        position: absolute;
+        top: 60px;
+        right: 20px;
+        padding: 15px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        z-index: 1000;
+    }
+
+    .nav-links,
+    .nav-buttons  {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .nav-menu.show {
+        display: flex;
+    }
+}
 .logo h1 {
     margin: 0;
     font-size: 30px;
@@ -28,12 +69,12 @@ body {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 40px;
+    gap: 10px;
     margin: 0;
     padding: 0;
 }
 
-.nav-links li a {
+.nav-links a {
     text-decoration: none;
     color: #333;
     font-size: 16px;
@@ -71,7 +112,6 @@ body {
 .signup-btn:hover {
     background-color: #1547b0;
 }
-
 .hero {
     display: flex;
     align-items: center;
